Fixed some styling problems in the order cart. Alignment issuses as well as colors and a hover animation for the order item action icons.

--- a/src/styles/components/OrderCart.css
+++ b/src/styles/components/OrderCart.css
@@ -19,7 +19,7 @@
 }
 
 .order-checkout-button {
-    width: 95%;
+    width: 98%;
     margin: 1% auto;
     position: relative;
     border: 2px solid #FFC72C;
@@ -55,7 +55,7 @@
 }
 
 .order-items-container {
-    background-color: #FFC72C;
+    background-color: #fff;
     width: 100%;
     height: 50%;
     border-radius: 5px;
